--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[target.'cfg(target_os = "android")'.dependencies]
+[target.'cfg(any(target_os = "android", target_os = "macos"))'.dependencies]
 jni = "0.19.0"
+
+[dependencies]
+futures = "0.3"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+
 
 [lib]
 crate_type = ["cdylib"]
