--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ jni = "0.19.0"
 futures = "0.3"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 openssl-sys = { version = "0.9.76", features = ["vendored"] }
+tokio = { version = "1", features = ["full"] }
 
 
 [lib]
