--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ futures = "0.3"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 openssl-sys = { version = "0.9.76", features = ["vendored"] }
 tokio = { version = "1", features = ["full"] }
+rusqlite = { version = "0.28.0", features = ["bundled"] }
 
 
 [lib]
