--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 openssl-sys = { version = "0.9.76", features = ["vendored"] }
 tokio = { version = "1", features = ["full"] }
 rusqlite = { version = "0.28.0", features = ["bundled"] }
+thiserror = "1.0.37"
 
 
 [lib]
